nontarget News

CHANGES in versions 2.1:
	
	(1) src, debugs

CHANGES in versions 2.0:
	
	(1) R, man adduct.search: mztol calculations adapted and explained
	(2) R adduct.search, pattern.search2: output compatible with enviMass
	(3) R combine: additional second rule for interfering peaks
	
CHANGES in versions 1.9:
	
	(1)	R homol.search: ceiling bound mass defect rounding, parameter redefinitions
	(2) R combine: redefinition for ambiguously merged and nested isotopologue groups
	(3)	src: signed int

CHANGES in versions 1.8:
	
	(1) change src comparison
	(2) shorthened title
	(3) debug charges
	(4) New homologue series detection
	(5) Optimized box queries in pattern.search2

CHANGES in version 1.7:
	
	(1) debug src of pattern.search

CHANGES in version 1.6:
	
	(1) man - examples revised

CHANGES in version 1.5:

	(1) R - adduct.search now based on kd-trees
	(2) src, man, R - debugs

CHANGES in version 1.4:

	(1) R - debug

CHANGES in version 1.3:

	(1) src, R, man - several debug
	(2) R - pattern.search2 introduced
	(3) R - homol.search upgraded