@@ -739,9 +739,7 @@ extern "C"{
                             results2[(2*nrow)+n]=level;
                             results2[(3*nrow)+parent]=(disc+1);
                             mindist=0;
-                            for(m=0;m<ncol;m++){
-                                mindist=(mindist+fabs(RMATRIX(data,n,m)-RMATRIX(data,parent,m)));
-                            }
+                            for(m=0;m<ncol;m++) mindist=(mindist+fabs(RMATRIX(data,n,m)-RMATRIX(data,parent,m)));
                             results2[(4*nrow)+n]=mindist;
                             results2[(5*nrow)+n]=(parent+1);
                             if( (results2[(4*nrow)+parent]>mindist) | (results2[(5*nrow)+parent]==0) ){
@@ -750,11 +748,9 @@ extern "C"{
                             }
                             doit=1;
                         }else{
-                            parent=(results2[(1*nrow)+parent]-1);
+                            parent = (results2[(1*nrow)+parent]-1);
                             disc++;
-                            if(disc>=ncol){
-                                disc=0;
-                            }
+                            if(disc >= ncol) disc = 0;
                             level++;
                         }
                     }else{ /* LOSON */
@@ -763,9 +759,7 @@ extern "C"{
                             results2[(2*nrow)+n]=level;
                             results2[(3*nrow)+parent]=(disc+1);
                             mindist=0;
-                            for(m=0;m<ncol;m++){
-                                mindist=(mindist+fabs(RMATRIX(data,n,m)-RMATRIX(data,parent,m)));
-                            }
+                            for(m=0;m<ncol;m++) mindist=(mindist+fabs(RMATRIX(data,n,m) - RMATRIX(data,parent,m)));
                             results2[(4*nrow)+n]=mindist;
                             results2[(5*nrow)+n]=(parent+1);
                             if( (results2[(4*nrow)+parent]>mindist) | (results2[(5*nrow)+parent]==0) ){
@@ -774,11 +768,9 @@ extern "C"{
                             }
                             doit=1;
                         }else{
-                            parent=(results2[parent]-1);
+                            parent = (results2[parent]-1);
                             disc++;
-                            if(disc>=ncol){
-                                disc=0;
-                            }
+                            if(disc >= ncol) disc = 0
                             level++;
                         }
                     }
