@@ -2,7 +2,8 @@ nontarget News
 
 CHANGES in versions 2.1:
 	
-	(1) src, debugs
+	(1) src, R_init_nontarget
+	(2) R homol.search: debugs
 
 CHANGES in versions 2.0:
 	
